Fixed error text of fields overlapping

--- a/src/CardDetailsForm.css
+++ b/src/CardDetailsForm.css
@@ -34,6 +34,7 @@
 
 .field-group {
   display: flex;
+  position: relative;
   column-gap: 15px;
   width: 100%;
 }
@@ -44,7 +45,7 @@
 }
 
 .exp-label {
-  margin-top: 200px;
+  margin-top: -35px;
   margin-left: -14px;
   color: hsl(278, 68%, 11%) !important;
 }
@@ -55,7 +56,7 @@
 }
 
 .mm-yy-label {
-  margin-top: 200px;
+  margin-top: -35px;
   margin-left: 23%;
   color: hsl(278, 68%, 11%) !important;
 }
@@ -70,7 +71,7 @@
 }
 
 .cvc-label {
-  margin-top: 200px;
+  margin-top: -35px;
   margin-left: 50%;
   color: hsl(278, 68%, 11%) !important;
 }
